# cppbatis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
conf/: cppbatis_config.json
connection/: connection.cpp  connection.h  connection_pool.h  singleton_base.h
data_struct/: user.h
include/connection/: connection.h  connection_pool.h  singleton_base.h
include/data_struct/: test.h  user.h
include/prepare_stmt/: prepare_stmt.h
include/reflection/: easy_json.h
include/util/reflection/: easy_json.h
prepare_stmt/: prepare_stmt.cpp  prepare_stmt.h
reflection/: easy_json.h
src/connection/: connection.cpp
src/prepare_stmt/: prepare_stmt.cpp
